data/derived/comb/progs/unify/prog2912.ml.out
Characters 82-86:
  | Sine(a) -> sin(pi*.VarX)
                       ^^^^
Error: This expression has type expr but an expression was expected of type
         float
